--- a/CSS/style.css
+++ b/CSS/style.css
@@ -1,3 +1,6 @@
+html{
+    height: 100%;
+}
 div#home {
     text-align: center;
     margin-top: 40%;
@@ -6,3 +9,7 @@ button#button{
     margin: 1%;
     width: 10%;
 }
+
+body.fond{
+    background: linear-gradient(114deg, #8db7d7, #9e90c1);
+    
