--- a/CSS/style.css
+++ b/CSS/style.css
@@ -80,3 +80,44 @@ button#cancel_button{
     margin-right: 5%;
     width: 30%;
 }
+.title{
+    font-size: 40px;
+    font-family: sans-serif;
+}
+.container{
+    margin-left: auto;
+    margin-right: auto;
+    width: 700px;
+}
+.form-group{
+    border: none;
+	border-bottom: solid 1px #474544;
+	color: lightgrey;
+	font-size: 10px;
+    font-weight: 400;
+    letter-spacing: 0,5px;
+	margin: 0em 0 1.875em 0;
+	padding: 0 0 0.300em 0;
+    text-transform: uppercase;
+	width: 100%;
+}
+
+.form-check{
+    color: black;
+    font-size: 10px;
+    height: 30px;
+
+}
+
+.btn-primary{
+    background-color: #9E90C1; 
+    border-color: #9E90C1; 
+    width: 80px;
+    margin: 20px;
+}
+
+input{
+    border:none;
+    width: 100%;
+    height: 30px;
+}
