--- a/CSS/style.css
+++ b/CSS/style.css
@@ -80,26 +80,35 @@ button#cancel_button{
     margin-right: 5%;
     width: 30%;
 }
+
 .title{
     font-size: 40px;
     font-family: sans-serif;
+    color: white;
 }
+
 .container{
     margin-left: auto;
     margin-right: auto;
     width: 700px;
 }
+
+.form{
+    display: block;
+    margin-top: 40px;
+}
+
 .form-group{
     border: none;
 	border-bottom: solid 1px #474544;
-	color: lightgrey;
 	font-size: 10px;
     font-weight: 400;
     letter-spacing: 0,5px;
 	margin: 0em 0 1.875em 0;
 	padding: 0 0 0.300em 0;
     text-transform: uppercase;
-	width: 100%;
+    width: 400px;
+    margin-left: 120px;
 }
 
 .form-check{
@@ -110,18 +119,65 @@ button#cancel_button{
 
 .form-control{
     border:none;
-    
+    background: none;
+}
+
+
+.form-check-label{
+    margin-top: 12px;
 }
 
 .btn-primary{
-    background-color: #9E90C1; 
-    border-color: #9E90C1; 
+    background-color: white; 
+    border-color:black; 
     width: 80px;
     margin: 20px;
+    border-radius: 50px;
+    margin-right: 40px;
+    color: black;
+}
+
+.btn-primary:hover{
+    background-color: green;
+    color: white;
+    border-color: white;
 }
 
 input{
     border:none;
     width: 100%;
     height: 30px;
+}
+
+
+.btn-warning{
+    background-color: white;
+    color: black;
+    border-color: black;
+    border-width: 2%;
+    border-radius: 50px;
+    margin-right: 50px;
+    width: 20%;
+    font-size: 10px;
+}
+
+
+.btn-warning:hover{
+    background-color: grey;
+    color: white;
+    border-color: white;
+    border-width: 2%;
+    border-radius: 50px;
+    width: 20%;
+}
+
+
+img {
+    height: auto;
+    width: 20%;
+    margin-left: 20%;
+}
+
+p{
+    color: white;
 }
