--- a/CSS/style.css
+++ b/CSS/style.css
@@ -1,3 +1,15 @@
+
+@font-face {
+    font-family: 'poiret_oneregular';
+    src: url('../font/poiretone-regular-webfont.woff2') format('woff2'),
+         url('../font/poiretone-regular-webfont.woff') format('woff');
+    font-weight: normal;
+    font-style: normal;
+
+}
+
+
+
 html{
     height: 100%;
 }
@@ -125,3 +137,67 @@ input{
     width: 100%;
     height: 30px;
 }
+
+/* header */
+
+header {
+    background: linear-gradient(114deg, #8db7d7, #9e90c1);
+}
+
+.header-logo{
+    height: auto;
+    width: 10%;
+    float: left;
+}
+
+.navbar {
+    display: block;
+    padding-right: 15px;
+ }
+
+.navbar ul {
+    text-align: right;
+    margin-top: 10px;
+    
+}
+
+.navbar ul li {
+display: inline-block;
+position: relative;
+
+}
+
+.navbar ul li a {
+    display: block;
+    padding: 5px 20px;
+    background-color: none;
+    color: rgb(66, 65, 65);
+    text-transform: capitalize;
+    transition: .2s ease all;
+    cursor: pointer;
+    border-radius: 50px;
+    border-color: black;
+    border: 1px solid;
+    border-right: 10%;
+    margin-right: 40px;
+    font-family: 'poiret_oneregular';
+    
+}
+
+.navbar ul li a:hover {
+    background-color: white;
+    text-decoration-line: none;
+}
+
+.navbar img {
+    height: auto;
+    width: 50px;
+    border: none;
+}
+li.profil{
+    width:5%;
+    margin-right: 40px;
+}
+
+/* Chatroom */
+
