--- a/CSS/style.css
+++ b/CSS/style.css
@@ -228,3 +228,65 @@ span{
 .btn.btn-success{
 
 }
+
+/* header */
+
+header {
+    background: linear-gradient(114deg, #8db7d7, #9e90c1);
+}
+
+.header-logo{
+    height: auto;
+    width: 10%;
+    float: left;
+    margin-left: 0%;
+}
+
+.navbar {
+    display: block;
+    padding-right: 15px;
+ }
+
+.navbar ul {
+    text-align: right;
+    margin-top: 10px;
+    
+}
+
+.navbar ul li {
+display: inline-block;
+position: relative;
+
+}
+
+.navbar ul li a {
+    display: block;
+    padding: 5px 20px;
+    background-color: none;
+    color: rgb(66, 65, 65);
+    text-transform: capitalize;
+    transition: .2s ease all;
+    cursor: pointer;
+    border-radius: 50px;
+    border-color: black;
+    border: 1px solid;
+    border-right: 10%;
+    margin-right: 40px;
+    font-family: 'poiret_oneregular';
+    
+}
+
+.navbar ul li a:hover {
+    background-color: white;
+    text-decoration-line: none;
+}
+
+.navbar img {
+    height: auto;
+    width: 50px;
+    border: none;
+}
+li.profil{
+    width:5%;
+    margin-right: 40px;
+}
