--- a/CSS/style.css
+++ b/CSS/style.css
@@ -89,19 +89,19 @@ button#valid_button:hover{
 .title{
     font-size: 40px;
     font-family: sans-serif;
-    float: left;
     color: white;
-    padding-top: 15%;
+    padding-top: 12%;
 }
 
 p{
-    color: white; 
+    color: white;
 }
 
 img {
     height: 100%;
     width: 20%;
-    margin-left: 20%;
+    margin-bottom: 10%;
+    margin-left: 10%;
     float: left;
 }
 
@@ -143,7 +143,6 @@ img {
 .form-control{
     border:none;
     background: none;
-    color: white;
 }
 
 
@@ -168,11 +167,9 @@ img {
 }
 
 input{
-    border:none;
     width: 100%;
     height: 30px;
 }
-
 
 .btn-warning{
     background-color: white;
