--- a/CSS/style.css
+++ b/CSS/style.css
@@ -65,7 +65,6 @@ width: 50px;
 img.logo{
     height: auto;
     width: 30%;
-
     margin-left: 0;
     display: block;
     margin-left: auto;
@@ -107,7 +106,6 @@ button#valid_button:hover{
     font-size: 40px;
     font-family: sans-serif;
     color: white;
-    padding-top: 12%;
 }
 
 p{
@@ -119,6 +117,13 @@ img {
     width: 20%;
     margin-left: 20%;
 }
+
+img.logo_cc {
+    height: 30%;
+    width: auto;
+    margin-left: 30%;
+}
+
 
 .container{
     margin-left: auto;
