--- a/CSS/style.css
+++ b/CSS/style.css
@@ -51,7 +51,7 @@ background-color: #00000000;
 border-color: white;
 border-width: 2%;
 border-radius: 50px;
-width: 50px;
+width: 90px;
 }
 button.btn.btn-secondary:first-child{
 background-color: #ffffff;
@@ -119,9 +119,9 @@ img {
 }
 
 img.logo_cc {
-    height: 30%;
+    height: 25%;
     width: auto;
-    margin-left: 30%;
+    margin-left: 20%;
 }
 
 
@@ -171,17 +171,16 @@ img.logo_cc {
 }
 
 .btn-primary{
-    background-color: #ffffff; 
-    border-color:black; 
-    width: 80px;
-    margin: 20px;
+    background-color: #00000000;
+    border-color: white;
+    border-width: 2%;
     border-radius: 50px;
+    width: 80px;
     margin-right: 40px;
-    color: black;
 }
 
 .btn-primary:hover{
-    background-color: blueviolet;
+    background-color: lightgrey;
     color: white;
     border-color: white;
 }
@@ -192,24 +191,21 @@ input{
 }
 
 .btn-warning{
-    background-color: white;
-    color: black;
-    border-color: black;
+    background-color: #00000000;
+    border-color: white;
     border-width: 2%;
     border-radius: 50px;
-    margin-right: 50px;
-    width: 20%;
-    font-size: 10px;
+    width: 210px;
+    margin-right: 40px;
 }
 
-
 .btn-warning:hover{
-    background-color: grey;
+    background-color: lightgrey;
     color: white;
     border-color: white;
     border-width: 2%;
     border-radius: 50px;
-    width: 20%;
+    width: 210px;
 }
 
 div.cookies{
@@ -225,9 +221,7 @@ span{
     display: inline-block;
     vertical-align: middle;
 }
-.btn.btn-success{
 
-}
 
 /* header */
 
