--- a/CSS/style.css
+++ b/CSS/style.css
@@ -166,7 +166,7 @@ img.logo_cc {
 
 .form-control{
     border:none;
-    background: none;
+    background: transparent;
 }
 
 
@@ -182,6 +182,8 @@ img.logo_cc {
     border-radius: 50px;
     margin-right: 40px;
     color: black;
+    width: 80px;
+    margin-right: 20px;
 }
 
 .btn-primary:hover{
@@ -196,14 +198,12 @@ input{
 }
 
 .btn-warning{
-    background-color: white;
-    color: black;
-    border-color: black;
+    background-color: #00000000;
+    border-color: white;
     border-width: 2%;
     border-radius: 50px;
-    margin-right: 50px;
-    width: 20%;
-    font-size: 10px;
+    width: 210px;
+    margin-right: 40px;
 }
 
 
