--- a/CSS/style.css
+++ b/CSS/style.css
@@ -63,7 +63,7 @@ color: black;
 border-color: white;
 border-width: 2%;
 border-radius: 50px;
-width: 50px;
+
 }
 
 img.logo{
@@ -85,7 +85,6 @@ color: black;
 border-color: white;
 border-width: 2%;
 border-radius: 50px;
-width: 50px;
 }
 
 button#valid_button{
@@ -108,14 +107,18 @@ margin-left: 5%;
 width: 30%;
 }
 
+h3{
+color: white;
+font-size: 16px;
+}
+
 .title{
 font-size: 40px;
-font-family: sans-serif;
 color: white;
 }
 
 p{
-color: white;
+color: black;
 }
 
 img {
@@ -177,14 +180,12 @@ margin-top: 12px;
 }
 
 .btn-primary{
-background-color: #ffffff; 
-border-color:black; 
+background-color: #ffffff;  
 width: 80px;
 margin: 20px;
 border-radius: 50px;
 margin-right: 40px;
 color: black;
-margin-right: 20px;
 }
 
 .btn-primary:hover{
@@ -192,7 +193,9 @@ background-color: grey;
 color: white;
 border-color: white;
 border-width: 2%;
+width: 80px;
 }
+
 
 input{
 width: 100%;
@@ -208,15 +211,15 @@ width: 210px;
 margin-right: 40px;
 }
 
-
 .btn-warning:hover{
 background-color: grey;
 color: white;
 border-color: white;
 border-width: 2%;
 border-radius: 50px;
-width: 20%;
+width: 210px;
 }
+
 
 div.cookies{
 background-color: #00000070;
