--- a/CSS/style.css
+++ b/CSS/style.css
@@ -239,6 +239,8 @@ vertical-align: middle;
 
 header {
 background: linear-gradient(114deg, #8db7d7, #9e90c1);
+position: absolute;
+top: 0;
 }
 
 .header-logo{
@@ -343,7 +345,7 @@ width:45%;
 
 div.user_inputs{
 background: linear-gradient(114deg, #8db7d7, #9e90c1);
-bottom: 0%;
+bottom: 0;
 position: absolute;
 width: 100%;
 color: white;
@@ -399,3 +401,27 @@ color: white;
 border-color: white;
 border-width: 2%;
 }
+
+/*Messages*/
+
+div.message{
+    border-radius: 50px;
+    background: lightgray;
+    width: 30%;
+    margin-left: auto;
+    margin-right: auto;
+    margin-top: 1%;
+    overflow: hidden;
+}
+
+span.username{
+    background-color: pink;
+    font-weight: bold;
+}
+
+/*div.chat_info{
+    height: 100%;
+    width: 20%;
+    margin-left: 70%;
+    float: left;
+}*/
