--- a/CSS/style.css
+++ b/CSS/style.css
@@ -1,11 +1,34 @@
 
-@font-face {
-font-family: 'poiret_oneregular';
-src: url('../font/poiretone-regular-webfont.woff2') format('woff2'),
-     url('../font/poiretone-regular-webfont.woff') format('woff');
-font-weight: normal;
-font-style: normal;
+/* Small devices (landscape phones, 576px and up) */
+@media (min-width: 576px) { 
+
 }
+
+/* Medium devices (tablets, 768px and up) */
+@media (min-width: 768px) { 
+    
+}
+
+/* Large devices (desktops, 992px and up) */ 
+@media (min-width: 980px) { 
+
+}
+
+/* Extra large devices (large desktops, 1200px and up)*/ 
+@media (min-width: 1200px) { 
+
+}
+
+@font-face {
+    font-family: 'poiret_oneregular';
+    src: url('../font/poiretone-regular-webfont.woff2') format('woff2'),
+         url('../font/poiretone-regular-webfont.woff') format('woff');
+    font-weight: normal;
+    font-style: normal;
+}
+
+
+/* Header */
 
 html{
 height: 100%;
@@ -40,6 +63,8 @@ background: linear-gradient(114deg, #8db7d7, #9e90c1);
 body#body{
 background: white;
 }
+/* fin du header*/ 
+
 
 /* home avec sign in et sign up */
 
@@ -80,8 +105,23 @@ background-color: grey;
 border-color: white;
 }
 
+div{
+text-align: center;
+}
+    
+button.btn.btn-secondary{
+background-color: #ffffff;
+color: black;
+border-color: white;
+border-width: 2%;
+border-radius: 50px;
+}
+    
+button.btn.btn-secondary:hover{
+background-color: lightgrey;
+color: white;
+}
 /* fin de la home */
-
 
 
 /* page register */ 
@@ -98,6 +138,8 @@ border-color: white;
 
 /* fin page register */ 
 
+
+
 img.logo{
 height: auto;
 width: 30%;
@@ -107,41 +149,8 @@ margin-left: auto;
 margin-right: auto;
 }
 
-div{
-text-align: center;
-}
 
-button.btn.btn-secondary{
-background-color: #ffffff;
-color: black;
-border-color: white;
-border-width: 2%;
-border-radius: 50px;
-}
 
-button.btn.btn-secondary:hover{
-background-color: lightgrey;
-color: white;
-}
-
-button#valid_button{
-background-color: white;
-color: black;
-border-color: black;
-border-width: 2%;
-border-radius: 50px;
-margin-left: 5%;
-width: 30%;
-}
-
-button#valid_button:hover{
-color: white;
-border-color: white;
-border-width: 2%;
-border-radius: 50px;
-margin-left: 5%;
-width: 30%;
-}
 
 h3{
 color: white;
@@ -449,6 +458,7 @@ font-family:'poiret_oneregular';
 font-size: 40px; 
 padding-left: 10px;
 margin: 30px;
+text-align: center;
 }
 
 h2{
