message CSS + delete

--- a/CSS/style.css
+++ b/CSS/style.css
@@ -1,34 +1,12 @@
 
-/* Small devices (landscape phones, 576px and up) */
-@media (min-width: 576px) { 
-
-}
-
-/* Medium devices (tablets, 768px and up) */
-@media (min-width: 768px) { 
-    
-}
-
-/* Large devices (desktops, 992px and up) */ 
-@media (min-width: 980px) { 
-
-}
-
-/* Extra large devices (large desktops, 1200px and up)*/ 
-@media (min-width: 1200px) { 
-
-}
-
 @font-face {
-    font-family: 'poiret_oneregular';
-    src: url('../font/poiretone-regular-webfont.woff2') format('woff2'),
-         url('../font/poiretone-regular-webfont.woff') format('woff');
-    font-weight: normal;
-    font-style: normal;
+font-family: 'poiret_oneregular';
+src: url('../font/poiretone-regular-webfont.woff2') format('woff2'),
+     url('../font/poiretone-regular-webfont.woff') format('woff');
+font-weight: normal;
+font-style: normal;
 }
 
-
-/* Header */
 html{
 height: 100%;
 }
@@ -59,14 +37,13 @@ body{
 background: linear-gradient(114deg, #8db7d7, #9e90c1);
 height: 100%;
 }
-
 body#body{
-background: white;
+    background: white;
 }
-/* fin du header*/ 
 
 
-/* Index - Home avec sign in et sign up */
+/* home avec sign in et sign up */
+
 p.hometext{
 font-family: 'poiret_oneregular';
 color: white;
@@ -77,8 +54,8 @@ margin-left: 40%;
 
 button.btn.btn-primary:first-child{
 font-family: 'poiret_oneregular';
-background-color: #00000000;
-border-color: white;
+background-color: white;
+color: black;
 border-width: 2%;
 border-radius: 50px;
 width: 80px;
@@ -104,10 +81,37 @@ background-color: grey;
 border-color: white;
 }
 
+/* fin de la home */
+
+
+
+/* page register */ 
+
+button.btn.btn-warning{
+color: white;
+border-color: white;
+}
+    
+button.btn.btn-warning:hover{
+background-color: lightgrey;
+border-color: white;
+}
+
+/* fin page register */ 
+
+img.logo{
+height: auto;
+width: 30%;
+margin-left: 0;
+display: block;
+margin-left: auto;
+margin-right: auto;
+}
+
 div{
 text-align: center;
 }
-    
+
 button.btn.btn-secondary{
 background-color: #ffffff;
 color: black;
@@ -115,10 +119,43 @@ border-color: white;
 border-width: 2%;
 border-radius: 50px;
 }
-    
+
 button.btn.btn-secondary:hover{
 background-color: lightgrey;
 color: white;
+}
+
+button#valid_button{
+background-color: white;
+color: black;
+border-color: black;
+border-width: 2%;
+border-radius: 50px;
+margin-left: 5%;
+width: 30%;
+}
+
+button#valid_button:hover{
+color: white;
+border-color: white;
+border-width: 2%;
+border-radius: 50px;
+margin-left: 5%;
+width: 30%;
+}
+
+h3{
+color: white;
+font-size: 16px;
+}
+
+.title{
+font-size: 40px;
+color: white;
+}
+
+p{
+color: black;
 }
 
 img {
@@ -126,10 +163,106 @@ height: 100%;
 width: 20%;
 margin-left: 20%;
 }
-/* Fin Index - Home */
+
+img.logo_cc {
+height: 30%;
+width: auto;
+margin-left: 30%;
+}
 
 
-/* Cookies */ 
+.container{
+margin-left: auto;
+margin-right: auto;
+width: 700px;
+}
+
+.form{
+display: block;
+margin-top: 40px;
+}
+
+.form-group{
+border: none;
+border-bottom: solid 1px #474544;
+font-size: 10px;
+font-weight: 400;
+letter-spacing: 0,5px;
+margin: 0em 0 1.875em 0;
+padding: 0 0 0.300em 0;
+text-transform: uppercase;
+width: 400px;
+margin-left: 120px;
+}
+
+.form-check{
+color: black;
+font-size: 10px;
+height: 30px;
+}
+
+.form-control::placeholder{
+color: white;
+opacity: 1;
+}
+
+.form-control{
+border:none;
+background: transparent;
+}
+
+
+.form-check-label{
+font-size: 12px;
+color: black;
+margin-top: 14px;
+}
+
+.btn-primary{
+font-family: 'poiret_oneregular';
+background-color: #ffffff;  
+width: 80px;
+margin: 20px;
+border-radius: 50px;
+margin-right: 40px;
+color: black;
+}
+
+.btn-primary:hover{
+font-family: 'poiret_oneregular';
+background-color: grey;
+color: white;
+border-color: white;
+border-width: 2%;
+width: 80px;
+}
+
+
+input{
+width: 100%;
+height: 30px;
+}
+
+.btn-warning{
+font-family: 'poiret_oneregular';
+background-color: #00000000;
+border-color: white;
+border-width: 2%;
+border-radius: 50px;
+width: 210px;
+margin-right: 40px;
+}
+
+.btn-warning:hover{
+font-family: 'poiret_oneregular';
+background-color: grey;
+color: white;
+border-color: white;
+border-width: 2%;
+border-radius: 50px;
+width: 210px;
+}
+
 div.cookies{
 background-color: #00000070;
 bottom: 0%;
@@ -143,10 +276,9 @@ span{
 display: inline-block;
 vertical-align: middle;
 }
-/* Fin cookies */ 
 
+/* header */
 
-/* Header */
 header {
 background: linear-gradient(114deg, #8db7d7, #9e90c1);
 }
@@ -165,7 +297,8 @@ padding-right: 15px;
 
 .navbar ul {
 text-align: right;
-margin-top: 10px;   
+margin-top: 10px;
+    
 }
 
 .navbar ul li {
@@ -187,6 +320,7 @@ border: 1px solid;
 border-right: 10%;
 margin-right: 40px;
 font-family: 'poiret_oneregular';
+    
 }
 
 .navbar ul li a:hover {
@@ -227,7 +361,8 @@ padding: 10px 20px 10px;
 } 
  
 .search input:focus { 
-border: 2px solid rgba(136, 76, 233, 0.407);     
+border: 2px solid rgba(136, 76, 233, 0.407); 
+     
 } 
  
 .search img { 
@@ -237,102 +372,56 @@ border: none;
 display: inline-block; 
 margin-left:0px;  
 } 
-/* Fin header */ 
 
-/* Sweet alert */ 
-button#valid_button{
-background-color: white;
-color: black;
-border-color: black;
-border-width: 2%;
-border-radius: 50px;
-margin-left: 5%;
-width: 30%;
-}
-        
-button#valid_button:hover{
-color: white;
-border-color: white;
-border-width: 2%;
-border-radius: 50px;
-margin-left: 5%;
-width: 30%;
-}       
-/* Fin sweet alert */ 
-
-/* Page Register */
-img.logo_cc {
-height: 30%;
-width: auto;
-margin-left: 30%;
-}
-    
-img.logo{
-height: auto;
-width: 30%;
-margin-left: 0;
-display: block;
-margin-left: auto;
-margin-right: auto;
-}
-    
-button.btn.btn-warning{
-color: white;
-border-color: white;
-}
-        
-button.btn.btn-warning:hover{
-background-color: lightgrey;
-border-color: white;
-}
-    
-h3{
-color: white;
-font-size: 16px;
-}
-    
-.title{
-font-size: 40px;
-color: white;
-}
-    
-input{
-width: 100%;
-height: 30px;
-}
-    
-.container{
-margin-left: auto;
-margin-right: auto;
-width: 700px;
-}
-    
-.form-check{
-color: black;
-font-size: 10px;
-height: 30px;
-}
-    
-.form-check-label{
-font-size: 12px;
-color: black;
-margin-top: 14px;
-}
-/* Fin page Register */ 
-    
  
-/* Page Chatroom */ 
+/* chatroom */ 
 input#send{
-width:15%;
+width: 5%;
+height: 36px;
+border-radius: 50px;
+border: solid 1px;
+background-color: transparent; 
+margin-bottom: 10px;
+margin-left: 20px;
+font-family: 'poiret_oneregular'; 
+}
+
+input#send:hover {
+    background-color: white;
+    text-decoration-line: none;
 }
 
 input#message{
-width:45%;
+width:55%;
+height: 36px;
+border: none;
+border-radius: 50px;
+font-family: 'poiret_oneregular'; 
+padding: 15px 20px 15px;
+margin-bottom: 10px;
 }
+
+input#delete{
+    width: auto;
+    height: 36px;
+    border-radius: 50px;
+    border: solid 1px;
+    background-color: transparent; 
+    font-family: 'poiret_oneregular'; 
+    margin-left: 20px;
+    padding-right: 10px;
+    padding-left: 10px;
+    
+    }
+    
+    input#delete:hover {
+        background-color: rgba(235, 79, 79, 0.815);
+        text-decoration-line: none;
+    }
 
 div.user_inputs{
 background: linear-gradient(114deg, #8db7d7, #9e90c1);
-bottom: 0;
+bottom: 0%;
 position: absolute;
 width: 100%;
 color: white;
@@ -348,12 +437,17 @@ font-size: 15px;
 .form-control-chatroom:placeholder{
 color:black;
 }
-/* Page Chatroom */ 
 
 
-/* Page Profile */
+/* page profile */
+
 .profile-pic img {
 width: 200px;
+}
+
+.profile-pic img:hover {
+width: 200px;
+background-color: white;
 }
 
 #checkbox-profile {
@@ -361,48 +455,17 @@ text-align: center;
 width: 30px;
 height: auto;
 }
-
-.container-profile-2{
+.container-profile-2, .container-profile-1{
 width: 50%;
 }
 
-.form{
-display: block;
-margin-top: 40px;
-}
+/* fin page profile */
 
-.form-group{
-border: none;
-border-bottom: solid 1px #474544;
-font-size: 10px;
-font-weight: 400;
-letter-spacing: 0,5px;
-margin: 0em 0 1.875em 0;
-padding: 0 0 0.300em 0;
-text-transform: uppercase;
-width: 400px;
-margin-left: 120px;
-}
-
-.form-control::placeholder{
-color: white;
-opacity: 1;
-}
-    
-.form-control{
-border:none;
-background: transparent;
-}
-/* Fin page profile */
-
-
-/* Page My Chatroom */ 
 h1{
 font-family:'poiret_oneregular';
 font-size: 40px; 
 padding-left: 10px;
 margin: 30px;
-text-align: center;
 }
 
 h2{
@@ -415,8 +478,8 @@ margin: 40px;
 
 .btn-create{
 font-family: 'poiret_oneregular';
-background-color: #fc6a6a00;
-border-color: grey;
+background-color: white;
+border-color: white;
 border-width: 2%;
 border-radius: 50px;
 width: 80px;
@@ -430,13 +493,8 @@ border-color: white;
 border-width: 2%;
 }
 
-p{
-color: black;
-}
-/* Fin page My Chatroom */ 
-
-
 /* Page Create a chatroom */
+
 .form-control-createchatroom{
 border: none;
 background: transparent;
@@ -449,69 +507,3 @@ color: black;
 font-family: 'poiret_oneregular';
 font-size: 14px;
 }
-
-.btn-primary{
-font-family: 'poiret_oneregular';
-background-color: #ffffff;  
-width: 80px;
-margin: 20px;
-border-radius: 50px;
-margin-right: 40px;
-color: black;
-}
-    
-.btn-primary:hover{
-font-family: 'poiret_oneregular';
-background-color: grey;
-color: white;
-border-color: white;
-border-width: 2%;
-width: 80px;
-}
-
-.btn-warning{
-font-family: 'poiret_oneregular';
-background-color: #00000000;
-border-color: white;
-border-width: 2%;
-border-radius: 50px;
-width: 210px;
-margin-right: 40px;
-}
-    
-.btn-warning:hover{
-font-family: 'poiret_oneregular';
-background-color: grey;
-color: white;
-border-color: white;
-border-width: 2%;
-border-radius: 50px;
-width: 210px;
-}   
-/* Fin page Create a chatroom */ 
-
-
-/* Page Messages */
-div.message{
-border-radius: 50px;
-background: lightgray;
-width: 30%;
-margin-left: auto;
-margin-right: auto;
-margin-top: 1%;
-overflow: hidden;
-}
-
-span.username{
-background-color: pink;
-font-weight: bold;
-}
-/* Fin page Message */ 
-
-
-/*div.chat_info{
-    height: 100%;
-    width: 20%;
-    margin-left: 70%;
-    float: left;
-}*/
